Add property 'repository' on CatalogEntry
